--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "cypress": "^4.11.0"
+  },
+  "dependencies": {
+    "superstatic": "^6.0.4"
   }
 }
